fix: index color flicker on load

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -87,7 +87,7 @@
     color: var(--primary-background);
   }
 
-  .dark .intro {
+  :global(.dark) .intro {
     background: var(--primary-foreground);
   }
 }
